# opmd_reduce

./: CMakeLists.txt  README.md
include/: utils.h
merger/: vranic_merger.cxx  vranic_merger.h
reducer/: .#opmd_reducer.cxx  CMakeLists.txt  opmd_reducer.cxx  opmd_reducer.h
